.k8s/09-queue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
  namespace: laravelapitemplates
  labels:
    name: queue
  annotations:
    secret.reloader.stakater.com/reload: "env"
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      name: queue
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: queue
    spec:
      containers:
        - name: queue
          image: gcr.io/yourproject/laravelapitemplates:SHORT_SHA
          command: ["/bin/bash"]
          args:
            - -c
            - |
              sleep 5
              php artisan migrate --force
              php artisan optimize
              php artisan view:cache
              ln -s public html
              ln -s /var/www /usr/share/nginx
              cp -r /var/www/public/. /static
              php artisan horizon --quiet
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
          volumeMounts:
            - name: static
              mountPath: /static

        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:latest
          command: ["/cloud_sql_proxy",
                    "-instances=yourproject:us-central1:yourproject=tcp:5432",
                    "-credential_file=/secrets/cloudsql/cloudsqlproxy.json"]
          resources:
            requests:
              cpu: 10m
              memory: 12Mi
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true

      volumes:
        - name: static
          nfs:
            server: nfs-server.seguidores.svc.cluster.local
            path: "/static"
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
