.k8s/03-nfs-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
  namespace: laravelapitemplates
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    name: nfs-server
