.k8s/08-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: laravelapitemplates
  labels:
    name: app
spec:
  ports:
    - protocol: TCP
      port: 9000
  selector:
    name: app
