.k8s/15-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: laravelapitemplates
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: nginx
